--- a/GC_customer_controller_v3/MDK-ARM/GC_customer_controller_v3/GC_customer_controller_v3.build_log.htm
+++ b/GC_customer_controller_v3/MDK-ARM/GC_customer_controller_v3/GC_customer_controller_v3.build_log.htm
@@ -21,15 +21,17 @@ Target DLL:      STLink\ST-LINKIII-KEIL_SWO.dll V3.0.9.0
 Dialog DLL:      TCM.DLL V1.53.0.0
  
 <h2>Project:</h2>
-D:\multi_function\desk\new_start\GC_customer_controller_v3\MDK-ARM\GC_customer_controller_v3.uvprojx
-Project File Date:  03/30/2024
+d:\multi_function\desk\new_start\GC_customer_controller_v3\MDK-ARM\GC_customer_controller_v3.uvprojx
+Project File Date:  04/10/2024
 
 <h2>Output:</h2>
 *** Using Compiler 'V5.06 update 7 (build 960)', folder: 'D:\keil\ARM\ARMCC\Bin'
 Build target 'GC_customer_controller_v3'
+compiling scara_kinematics.c...
+compiling senddatatask.c...
 compiling joint_task.c...
 linking...
-Program Size: Code=26708 RO-data=1848 RW-data=464 ZI-data=6032  
+Program Size: Code=26292 RO-data=1848 RW-data=592 ZI-data=6056  
 FromELF: creating hex file...
 "GC_customer_controller_v3\GC_customer_controller_v3.axf" - 0 Error(s), 0 Warning(s).
 
